# roadrolla-gl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  roadrolla.sln  roadrolla.vcxproj  roadrolla.vcxproj.filters
res/: roadrolla.rc
src/: Actor.h  CMakeLists.txt  Camera.h  Color.h  Primitive.cpp  Primitive.h  RoadRollerGame.cpp  RoadRollerGame.h  Texture.h  Vector.h  main.cpp
src/Actors/: CMakeLists.txt  Chicken.cpp  Chicken.h  RoadRoller.cpp  RoadRoller.h
src/Primitives/: CMakeLists.txt  Circle.cpp  Circle.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Ellipsoid.cpp  Ellipsoid.h  ParametricSurface.cpp  ParametricSurface.h  Plane.cpp  Plane.h
src/Textures/: CMakeLists.txt  GrassTexture.h  WheelTexture.h
src/roadrolla/: Camera.h  Color.h  LightSource.h  Material.h  Primitive.cpp  RoadRollerGame.cpp  Vector.h  main.cpp  roadrolla.vcxproj  roadrolla.vcxproj.filters
src/roadrolla/Actors/: RoadRoller.cpp
src/roadrolla/Primitives/: Circle.cpp  Cone.cpp  Cone.h  ParametricSurface.cpp  ParametricSurface.h  Plane.cpp
src/roadrolla/Textures/: RoadTexture.h  WheelTexture.h
